Fixes collapsing at top

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -97,19 +97,24 @@ evann stuff
 ************************************************/
 
 
-.header{
+.headline{
+    
+    color: #FFF;
+
     &.shrink {
-        height: 50vh;
-        background: #bdbdbd;
-        background-image : url( ../images/soldiers.jpg );
         position: fixed;
+        top: 0;
         width: 100%;
+        height: 50vh;
+        background-image : url( ../images/soldiers.jpg );
+        background-size: cover;
     }
 }
 
 .content{
     top: 50vh;
     position: relative;
+    background-color: #FFF;
 }
 
 .parallax {
